crates/laplace-macro/tests/ui/fail/verify_double_test.rs
// SPDX-License-Identifier: Apache-2.0

#[laplace_macro::laplace_verify(threads = 1)]
#[test]
async fn double_test() {}

fn main() {}
